--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <nav class="navbar navbar-expand-lg">
     <a class="navbar-brand" href="#">Mikian Musser</a>
-    <a class="genGitButton navGitButton" href="https://github.com/mm909/CirclePackingM-v1" rel="noreferrer noopener">GitHub</a>
+    <a class="genGitButton navGitButton" href="https://github.com/mm909/AStarMaze" rel="noreferrer noopener">GitHub</a>
   </nav>
   <div class="title">
     <h3>A* Maze</h3>
