--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <script type="text/javascript" src="Maze.js"></script>
   <script type="text/javascript" src="sketch.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="p5css.css">
+  <link rel="stylesheet" href="https://gitcdn.link/repo/mm909/Mikian.Musser/master/css/p5cssCDN.css">
 </head>
 
 <body>
